[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "podcast"
version = "0.4.1"
description = "RSS-first podcast downloader with queues and yt-dlp integration"
authors = [{ name = "crow" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp"
]

[project.scripts]
podcast = "podcast.podcast:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
podcast = ["CHANGELOG.md"]